--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dynamic = ["version"]
 dependencies = [
   "packaging",
   "tomli >= 1.1.0; python_version < '3.11'",
+  "importlib-metadata; python_version < '3.8'",
 ]
 
 [[project.authors]]
