--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ classifiers = [
 ]
 dynamic = ["version"]
 dependencies = [
+  "argcomplete",
   "packaging",
   "tomli >= 1.1.0; python_version < '3.11'",
   "importlib-metadata; python_version < '3.8'",
