--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,11 +43,8 @@ allow_untyped_globals = true
 allow_redefinition = true
 ignore_missing_imports = true
 
-[tool.edit-lint]
-linters = [
-  "ruff",
-  "mypy",
-  "pyright",
-]
+[tool.ruff.format]
+quote-style = "single"
+skip-magic-trailing-comma = true
 
 # vim:se sw=2:
